fix: #contact header not visible on iphone 5s

--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -24,11 +24,13 @@
     margin: 20px;
     text-transform: uppercase;
     font: {
-      size: 4rem;
+      @include media(">tablet") {
+        size: 4rem;
+      }
       weight: 700;
     }
     @include media("<tablet") {
-      font-size: 3rem;
+      font-size: 2rem;
     }
   }
   &__a {
@@ -62,7 +64,6 @@
       display: block;
       font-size: 1.1rem;
       font-weight: 600;
-
       width: 100%;
       border: 2px solid $myOrange;
       padding: 15px;
